# quantum

./: .gitignore  CMakeLists.txt  README.md  btc.xlsx  data.txt  signal.txt  todos.md
include/ADFTest/: ADFTest.h
include/CallBack/: CallBack.h
include/DataReader/: DataReader.h
include/DateTime/: DateTime.h
include/Enum/: Enum.h
include/OutputTools/: OutputTools.h
include/Plot/: Plot.h
include/Selector/: PairTradingSelector.h
include/Singles/: Signals.h
include/Statics/: Statics.h
include/Stock/: Stock.h
include/StockPool/: StockPool.h
include/Strategy/: ConcurrentPairTradingStrategy.h  IStrategy.h  LaomaStrategy.h  PairTradingStrategy.h  RSIStrategy.h
quantum_data/: .~lock.shangzheng200.xlsx#  .~lock.stk_pairtding.xlsx#  .~lock.zhongzheng100.xlsx#  .~lock.zhongzheng100real.xlsx#  USD.xlsx  btc.xlsx  exchange pairs.xlsx  pairstk.xlsx  riyuan.xlsx  stk_pairtding.xlsx  zhongzheng100-09-14.xlsx  zhongzheng100-0901-1401.xlsx  zhongzheng100-4year.xlsx  zhongzheng100real.xlsx  ~$pairstk.xlsx  人民币中间价.xlsx  成分进出记录(000132.SH).xls  科创50.xlsx
src/: CMakeLists.txt  datetime_test.cpp  main.cpp  main_LaomaStg.cpp  main_RSIstg.cpp  main_pairtrading.cpp  main_siglepairtrading.cpp  main_signalpairtrading.cpp
src/ADFTest/: ADFTest.cpp  ADFTest.py  mytest.py  py_CallFunc.py
src/CallBack/: CallBack.cpp
src/DataReader/: DataReader.cpp
src/DateTime/: DateTime.cpp
src/Enum/: Enum.cpp
src/OutputTools/: OutputTools.cpp
src/PlotTools/: Plot.cpp  Plot.py  plot_data.txt
src/Signals/: Signals.cpp
src/Statics/: Statics.cpp  signal.txt
src/Stock/: Stock.cpp
src/StockPool/: StockPool.cpp
src/Strategy/: ConcurrentPairTradingStrategy.cpp  IStrategy.cpp  LaomaStrategy.cpp  PairTradingStrategy.cpp  RSIStrategy.cpp  signal.txt
src/test/: 1.cpp  script.py
src/tmp/: tmp.cpp
src/tmp2/: tmp2.cpp
